--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "npx rimraf dist && npx tsc",
+    "serve": "node dist",
+    "start": "npm run build && npm run serve",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "@prisma/cli": "^2.8.0",
+    "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.11.2",
     "rimraf": "^3.0.2",
     "typescript": "^4.0.3"
