--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "npx rimraf dist && npx -p typescript tsc",
     "serve": "node dist",
     "start": "npm run build && npm run serve",
+    "dev": "npx nodemon -w ./src -e ts --exec \"npx ts-node ./src\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,7 +19,9 @@
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.11.2",
+    "nodemon": "^2.0.6",
     "rimraf": "^3.0.2",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
