--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
-  "name": "notas-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "npx rimraf dist && npx -p typescript tsc",
-    "serve": "node dist",
-    "start": "npm run build && npm run serve",
-    "dev": "npx nodemon -w ./src -e ts --exec \"npx ts-node ./src\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@prisma/cli": "^2.9.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.8",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/node": "^14.11.2",
-    "nodemon": "^2.0.6",
-    "rimraf": "^3.0.2",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
-  },
-  "dependencies": {
-    "@prisma/client": "^2.11.0",
-    "apollo-server": "^2.18.1",
-    "bcryptjs": "^2.4.3",
-    "class-validator": "^0.12.2",
-    "dotenv": "^8.2.0",
-    "graphql": "^15.3.0",
-    "jsonwebtoken": "^8.5.1",
-    "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.0.0"
-  }
+	"name": "notas-server",
+	"version": "1.0.0",
+	"engines": {
+		"node": "15.x"
+	},
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "npx rimraf dist && npx -p typescript tsc",
+		"serve": "node dist",
+		"start": "npm run build && npm run serve",
+		"dev": "npx nodemon -w ./src -e ts --exec \"npx ts-node ./src\"",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@prisma/cli": "^2.9.0",
+		"@types/bcryptjs": "^2.4.2",
+		"@types/express": "^4.17.8",
+		"@types/jsonwebtoken": "^8.5.0",
+		"@types/node": "^14.11.2",
+		"nodemon": "^2.0.6",
+		"rimraf": "^3.0.2",
+		"ts-node": "^9.0.0",
+		"typescript": "^4.0.3"
+	},
+	"dependencies": {
+		"@prisma/client": "^2.11.0",
+		"apollo-server": "^2.18.1",
+		"bcryptjs": "^2.4.3",
+		"class-validator": "^0.12.2",
+		"dotenv": "^8.2.0",
+		"graphql": "^15.3.0",
+		"jsonwebtoken": "^8.5.1",
+		"reflect-metadata": "^0.1.13",
+		"type-graphql": "^1.0.0"
+	}
 }
