--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"serve": "node dist",
 		"start": "npm run build && npm run serve",
 		"dev": "npx nodemon -w ./src -e ts --exec \"npx ts-node ./src\"",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"heroku-prebuild": "npm update"
 	},
 	"keywords": [],
 	"author": "",
