--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@prisma/cli": "^2.9.0",
+		"@prisma/cli": "^2.12.0",
+		"@prisma/client": "^2.12.0",
+		"@prisma/codemods": "^0.5.1",
 		"@types/bcryptjs": "^2.4.2",
-		"@types/express": "^4.17.8",
+		"@types/express": "^4.17.9",
 		"@types/jsonwebtoken": "^8.5.0",
-		"@types/node": "^14.11.2",
+		"@types/node": "^14.14.9",
 		"nodemon": "^2.0.6",
 		"rimraf": "^3.0.2",
 		"ts-node": "^9.0.0",
-		"typescript": "^4.0.3"
+		"typescript": "^4.1.2"
 	},
 	"dependencies": {
-		"@prisma/client": "^2.11.0",
 		"apollo-server": "^2.18.1",
 		"bcryptjs": "^2.4.3",
 		"class-validator": "^0.12.2",
