--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
             POSTGRES_USER: postgres
             POSTGRES_DB: notas
         volumes:
-            - /var/lib/postgresql/data:/var/lib/postgresql/data
+            - ./../db_data:/var/lib/postgresql/data
+        restart: always
         ports:
             - '5432:5432'
     server:
