--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ DATABASE_HOST=
 DATABASE_PORT=
 DATABASE_NAME=
 DATABASE_URL=postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public
+
+APP_SECRET=
