--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "npx tsc -b",
-		"serve": "node dist -r dotenv/config",
+		"serve": "node dist",
 		"start": "npm run build && npm run serve",
 		"dev": "ts-node-dev --respawn src/index.ts -r dotenv/config",
 		"test": "echo \"Error: no test specified\" && exit 1",
