--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
 	"name": "notas-server",
 	"version": "1.0.0",
-	"engines": {
-		"node": "15.x"
-	},
 	"description": "",
 	"main": "index.js",
 	"scripts": {
@@ -18,22 +15,28 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@prisma/cli": "^2.13.1",
 		"@types/bcryptjs": "^2.4.2",
-		"@types/express": "^4.17.9",
-		"@types/jsonwebtoken": "^8.5.0",
-		"@types/node": "^14.14.16",
-		"ts-node-dev": "^1.1.1",
-		"typescript": "^4.1.3"
+		"@types/cookie-parser": "^1.4.2",
+		"@types/express": "^4.17.12",
+		"@types/jsonwebtoken": "^8.5.2",
+		"@types/node": "^15.12.4",
+		"prisma": "^2.25.0",
+		"ts-node-dev": "^1.1.6",
+		"typescript": "^4.3.4"
 	},
 	"dependencies": {
-		"@prisma/client": "^2.13.1",
-		"apollo-server": "^2.19.1",
+		"@prisma/client": "^2.25.0",
+		"apollo-server-express": "^2.25.1",
+		"axios": "^0.21.1",
 		"bcryptjs": "^2.4.3",
-		"class-validator": "^0.12.2",
-		"dotenv": "^8.2.0",
-		"graphql": "^15.3.0",
+		"cheerio": "^1.0.0-rc.10",
+		"class-validator": "^0.13.1",
+		"cookie-parser": "^1.4.5",
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"graphql": "^15.5.1",
 		"jsonwebtoken": "^8.5.1",
+		"moment": "^2.29.1",
 		"reflect-metadata": "^0.1.13",
 		"type-graphql": "^1.0.0"
 	}
